fix spacing issue in signup form

--- a/_sass/components/mailchimp.sass
+++ b/_sass/components/mailchimp.sass
@@ -3,6 +3,7 @@
     form 
         text-align: center
         padding: 10px 0 10px 0
+        line-height: unset
 
     label
         display: block
